feat(user): add user role
